[gd_scene load_steps=6 format=2]

[ext_resource path="res://Playame.tscn" type="PackedScene" id=1]
[ext_resource path="res://main_floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://sound/ame_bgm.mp3" type="AudioStream" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="Floor" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 84, 422 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 84, 422 )

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="spawn_enemy"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
